# odyssey

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  skills-lock.json
.agents/skills/testing-python/: .skillfish.json
.compozy/tasks/group-house-voting/: _tasks.md  task_03.md  task_04.md  task_05.md  task_06.md  task_09.md
.compozy/tasks/group-house-voting/memory/: MEMORY.md  task_03.md  task_04.md  task_05.md  task_06.md  task_09.md
.compozy/tasks/sqlite-hf-persistence-pt-br/: _tasks.md  task_02.md  task_04.md
.compozy/tasks/sqlite-hf-persistence-pt-br/memory/: MEMORY.md  task_02.md
app/: __init__.py  auth.py  components.py  config.py  db.py  errors.py  persistence.py  routes.py  scraper.py
app/components/: __init__.py  admin.py  feedback.py  houses.py  layout.py
static/: style.css
tests/: conftest.py  test_app.py  test_auth.py  test_config.py  test_db.py  test_docs.py  test_persistence.py  test_qa_artifacts.py  test_routes_admin.py  test_routes_auth.py  test_routes_houses.py  test_routes_vote.py  test_scaffold.py  test_scraper.py  test_styling.py
tests/fixtures/: airbnb_html_price.html  airbnb_listing.html  booking_html_price.html  booking_jsonld_price.html  booking_listing.html  booking_meta_price.html  booking_public_no_og.html  booking_visible_price_only.html  no_og_listing.html
